Arquitectura de Capas

--- a/src/views/profile.handlebars
+++ b/src/views/profile.handlebars
@@ -9,6 +9,7 @@
     <p>Nombre: {{user.first_name}} {{user.last_name}}</p>
     <p>Email: {{user.email}}</p>
     <p>Edad: {{user.age}}</p>
+    <a href="/products" class="button">Ver Productos</a>
     <a href="/api/sessions/logout">Cerrar sesión</a>
   </body>
 </html>
