--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,89 +1,91 @@
 * {
-    background-color: black;
-    color: white;
+  background-color: whitesmoke;
+  color: black;
 }
 
 hr {
-    width: 100%;
+  width: 100%;
 }
 
 h3 {
-    text-align: center;
+  text-align: center;
 }
 
 input {
-    background: white;
-    color: black;
+  background: white;
+  color: black;
 }
 
-button, .button {
-    cursor: pointer;
-    padding: 5px;
-    border-radius: 5px;
-    text-decoration: none;
+button,
+.button {
+  cursor: pointer;
+  padding: 5px;
+  border-radius: 5px;
+  text-decoration: none;
 }
 
 .box {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .products-box {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
 }
 
 .product-card {
-    display: flex;
-    flex-direction: column;
-    padding: 10px;
-    margin: 5px;
-    border: 1px solid white;
+  display: flex;
+  flex-direction: column;
+  padding: 10px;
+  margin: 5px;
+  border: 1px solid white;
 }
 
 .products-form form {
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
 }
 
 .products-form input {
-    margin-bottom: 5px;
+  margin-bottom: 5px;
 }
 
 .footer {
-    margin-top: 10px;
+  margin-top: 10px;
 }
 
 .view-cart {
-    display: none;
-    position: absolute;
-    right: 10px;
-    top: 15px;
+  display: none;
+  position: absolute;
+  right: 10px;
+  top: 15px;
 }
 
 .view-products {
-    display: block;
-    position: absolute;
-    left: 10px;
-    top: 15px;
+  display: block;
+  position: absolute;
+  left: 10px;
+  top: 15px;
 }
 
-#button-create, #button-products {
-    background: #1da81d;
+#button-create,
+#button-products {
+  background: #1da81d;
 }
 
 #button-delete {
-    background: #d51515;
+  background: #d51515;
 }
 
 #button-paginate {
-    background: #646464;
+  background: #646464;
 }
 
 #button-cart {
-    background: #ffa500;
+  background: #ffa500;
 }
