--- a/src/views/profile.handlebars
+++ b/src/views/profile.handlebars
@@ -10,6 +10,6 @@
     <p>Email: {{user.email}}</p>
     <p>Edad: {{user.age}}</p>
     <a href="/products" class="button">Ver Productos</a>
-    <a href="/api/sessions/logout">Cerrar sesión</a>
+    <a href="/logout">Cerrar sesión</a>
   </body>
 </html>
