--- a/src/views/index.handlebars
+++ b/src/views/index.handlebars
@@ -1,26 +1,22 @@
 <div class="box">
-    <div class="view-cart"><a id="button-cart" class="button">Ver Carrito</a></div>
-    <h1>Productos</h1>
-    <div class="products-box">
-        {{#each products}}
-            <div class="product-card">
-                <h3>{{this.title}}</h3>
-                <hr>
-                <p>Categoria: {{this.category}}</p>
-                <p>Descripción: {{this.description}}</p>
-                <p>Precio: $ {{this.price}}</p>
-                <button id="button-create" onclick="addToCart('{{this._id}}')">Agregar al Carrito</button>
-            </div>
-        {{/each}}
-    </div>
-    <div class="footer">
-        {{#if prevLink.exist}}
-            <a id="button-paginate" class="button" href="{{prevLink.link}}">Anterior</a>
-        {{/if}}
-        {{#if nextLink.exist}}
-            <a id="button-paginate" class="button" href="{{nextLink.link}}">Siguiente</a>
-        {{/if}}
-    </div>
+  {{#if user}}
+    <h1>Bienvenido, {{user.first_name}}!</h1>
+  {{else}}
+    <h1>Bienvenido!</h1>
+  {{/if}}
+  <h2>Productos Disponibles</h2>
+  <div class="products-box">
+    {{#each products}}
+      <div class="product-card">
+        <h3>{{this.title}}</h3>
+        <hr />
+        <p>Categoría: {{this.category}}</p>
+        <p>Descripción: {{this.description}}</p>
+        <p>Precio: ${{this.price}}</p>
+        <button id="button-create" onclick="addToCart('{{this._id}}')">Agregar
+          al Carrito</button>
+      </div>
+    {{/each}}
+  </div>
 </div>
-
 <script src="/js/ecommerce.js"></script>
