--- a/src/views/register.handlebars
+++ b/src/views/register.handlebars
@@ -59,4 +59,9 @@
       <a href="/login" class="link">Ya tengo una cuenta</a>
     </div>
   </div>
+
+  {{#if error}}
+    <p class="error">{{error}}</p>
+    <a href="{{loginLink}}" class="btn-login">Inicia Sesión</a>
+  {{/if}}
 </div>
