--- a/src/views/index.handlebars
+++ b/src/views/index.handlebars
@@ -1,22 +1,36 @@
-<div class="box">
-  {{#if user}}
-    <h1>Bienvenido, {{user.first_name}}!</h1>
-  {{else}}
-    <h1>Bienvenido!</h1>
-  {{/if}}
-  <h2>Productos Disponibles</h2>
-  <div class="products-box">
-    {{#each products}}
-      <div class="product-card">
-        <h3>{{this.title}}</h3>
-        <hr />
-        <p>Categoría: {{this.category}}</p>
-        <p>Descripción: {{this.description}}</p>
-        <p>Precio: ${{this.price}}</p>
-        <button id="button-create" onclick="addToCart('{{this._id}}')">Agregar
-          al Carrito</button>
-      </div>
-    {{/each}}
+<div class="header">
+  <div class="welcome-message">
+    {{#if user}}
+      <h1>Bienvenido, {{user.first_name}}!</h1>
+    {{else}}
+      <h1>Bienvenido!</h1>
+    {{/if}}
   </div>
+  <div class="user-actions">
+    {{#if user}}
+      <a href="/current" class="link-profile">Mi perfil</a>
+    {{else}}
+      <a href="/login" class="link-login">Inicia sesión</a>
+    {{/if}}
+  </div>
+</div>
+
+<div class="products-box">
+  {{#each products}}
+    <div class="product-card">
+      <h3>{{this.title}}</h3>
+      <hr />
+      <p>Categoría: {{this.category}}</p>
+      <p>Descripción: {{this.description}}</p>
+      <p>Precio: ${{this.price}}</p>
+      {{#if user}}
+        <button id="button-create" onclick="addToCart('{{this._id}}')">
+          Agregar al Carrito
+        </button>
+      {{else}}
+        <p class="login-prompt">Inicia sesión para comprar</p>
+      {{/if}}
+    </div>
+  {{/each}}
 </div>
 <script src="/js/ecommerce.js"></script>
