--- a/src/views/current.handlebars
+++ b/src/views/current.handlebars
@@ -1,11 +1,10 @@
 <div class="profile-container box">
   <div class="profile-card">
-    <h2>Bienvenido, {{user.first_name}}!</h2>
+    <h2>Bienvenido, {{user.firstName}}!</h2>
     <div class="profile-details">
-      <p><strong>Nombre:</strong> {{user.first_name}} {{user.last_name}}</p>
+      <p><strong>Nombre:</strong> {{user.firstName}} {{user.lastName}}</p>
       <p><strong>Email:</strong> {{user.email}}</p>
       <p><strong>Edad:</strong> {{user.age}}</p>
-      <p><strong>Rol:</strong> {{user.role}}</p>
     </div>
     <div class="profile-actions">
       <a href="/products" class="button btn-profile">Ver Productos</a>
