mensajes de error especificos a usuarios y contraseñas corregidos

--- a/src/views/index.handlebars
+++ b/src/views/index.handlebars
@@ -9,6 +9,7 @@
   <div class="user-actions">
     {{#if user}}
       <a href="/current" class="link-profile">Mi perfil</a>
+      <a href="/logout" class="link-logout">Cerrar Sesión</a>
     {{else}}
       <a href="/login" class="link-login">Inicia sesión</a>
     {{/if}}
