--- a/src/views/index.handlebars
+++ b/src/views/index.handlebars
@@ -24,12 +24,11 @@
       <p>Categoría: {{this.category}}</p>
       <p>Descripción: {{this.description}}</p>
       <p>Precio: ${{this.price}}</p>
+      <a href="/products/{{this._id}}">Ver detalle</a>
       {{#if user}}
-        <button id="button-create" onclick="addToCart('{{this._id}}')">
-          Agregar al Carrito
-        </button>
+        <button onclick="addToCart('{{this.id}}')">Agregar al carrito</button>
       {{else}}
-        <p class="login-prompt">Inicia sesión para comprar</p>
+        <p>Inicia sesión para comprar</p>
       {{/if}}
     </div>
   {{/each}}
