Arreglamos el forgot-password en Nav

--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -36,7 +36,7 @@
     </form>
     <div class="login-links">
       <a href="/register" class="link">Crear una cuenta</a>
-      <a href="/password-recovery" class="link">¿Olvidaste tu contraseña?</a>
+      <a href="/forgot-password" class="link">¿Olvidaste tu contraseña?</a>
     </div>
   </div>
 </div>
