--- a/src/views/resetPassword.handlebars
+++ b/src/views/resetPassword.handlebars
@@ -1,6 +1,6 @@
-<h1>Restablecer tu contraseña</h1>
-<form method="POST" action="/api/sessions/reset-password/{{token}}">
-  <label for="newPassword">Nueva contraseña:</label>
+<h1>Restablecer Contraseña</h1>
+<form method="POST" action="/reset-password/{{token}}">
+  <label for="newPassword">Nueva Contraseña:</label>
   <input type="password" id="newPassword" name="newPassword" required />
   <button type="submit">Restablecer</button>
 </form>
