--- a/src/views/resetPassword.handlebars
+++ b/src/views/resetPassword.handlebars
@@ -2,5 +2,5 @@
 <form method="POST" action="/reset-password/{{token}}">
   <label for="newPassword">Nueva Contraseña:</label>
   <input type="password" id="newPassword" name="newPassword" required />
-  <button type="submit">Restablecer</button>
+  <button type="submit">Restablecer Contraseña</button>
 </form>
