--- a/src/views/forgotPassword.handlebars
+++ b/src/views/forgotPassword.handlebars
@@ -1,6 +1,13 @@
 <h1>Recuperar Contraseña</h1>
-<form action="/api/sessions/forgot-password" method="POST">
+<form action="/forgot-password" method="POST">
+  {{#if success}}
+    <p class="success-message">{{success}}</p>
+  {{/if}}
+  {{#if error}}
+    <p class="error-message">{{error}}</p>
+  {{/if}}
   <label for="email">Correo electrónico:</label>
   <input type="email" id="email" name="email" required />
   <button type="submit">Enviar</button>
 </form>
+<a href="/products" class="link">Volver a la lista de productos</a>
