--- a/src/views/resetPassword.handlebars
+++ b/src/views/resetPassword.handlebars
@@ -1,6 +1,13 @@
 <h1>Restablecer Contraseña</h1>
 <form method="POST" action="/reset-password/{{token}}">
+  {{#if success}}
+    <p class="success-message">{{success}}</p>
+  {{/if}}
+  {{#if error}}
+    <p class="error-message">{{error}}</p>
+  {{/if}}
   <label for="newPassword">Nueva Contraseña:</label>
   <input type="password" id="newPassword" name="newPassword" required />
   <button type="submit">Restablecer Contraseña</button>
 </form>
+<p><a href="/login">Volver al inicio de sesión</a></p>
