--- a/src/views/checkout.handlebars
+++ b/src/views/checkout.handlebars
@@ -10,4 +10,4 @@
   {{/each}}
 </div>
 <button>Confirmar compra</button>
-<script src="/js/ecommerce.js"></script>
+<script src="/js/cart.js"></script>
